--- a/photogallery/index.html
+++ b/photogallery/index.html
@@ -15,15 +15,15 @@
     </header>
 
     <div class="gallery">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="image cat 1">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="image cat 2">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="image cat 3">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="image cat 4">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="image cat 5">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="image cat 6">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="image cat 7">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="image cat 8">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="image cat 9">
     </div>
 </body>
 
